[package]
name = "ryo_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
# port at 0xf4 with a size of 0x04 (four bytes)
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = "0.9.2"
uart_16550 = "0.2.16"
volatile = { version = "0.3"}
x86_64 = "0.14.8"

[dependencies.crossbeam-queue]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.21"
default-features = false
features = ["alloc"]